tests/baselines/reference/parserReturnStatement2.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement2.ts(2,4): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement2.ts (1 errors) ====
    {
       return;
       ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
    }